@@ -575,7 +575,7 @@ static NSString *PWD_ENVVALUE = @"~";
 				 send_strlen == 1 &&
 				 send_str[0] == 0x03) || keycode==52)
 			{
-				send_str = "\012";  // NumericPad or Laptop Enter -> 0x0a
+				send_str = "\015";  // NumericPad or Laptop Enter -> 0x0d
 				send_strlen = 1;
 			}
 			if (modflag & NSControlKeyMask &&
